Changelog
=========

9.7.dev0 - (unreleased)
-----------------------
* Change: removed the full and short Indicator view logic, opting to show
  the full toc view by default
  [ichimdav refs #24440]

9.6 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install
  script from the main EEA CPB repository
  [olimpiurob refs #22402]
* Bug fix: Removed bullet background images from the metadata inputs and the
  transparent background now that we have the single blue background
  [ichimdav refs #23500]

9.5 - (2015-02-03)
------------------
* Change: use preview only for inline dashboards when printing an AssessmentPart
  and use a predefined size for charts in order to avoid font reduction of entire
  pdf output
  [ichimdav refs #22489]
* Bug fix: Fixed the display of AssementPart's title
  [ghicaale refs #22637]

9.4 - (2015-01-22)
------------------
* Bug fix: Fixed figures.pt when inline_chart is not published
  [voineali refs #22309]

9.3 - (2014-12-23)
------------------
* Bug fix: Fixed inline comments for Indicators
  [voineali refs #22291]

9.2 - (2014-12-10)
------------------
* Bug fix: Fixed specification view to work with Chameleon
  [voineali refs #21919]
* Bug fix: check if chart-notes is available on context avoiding thus an
  AttributeError
  [ichimdav refs #22208]
* Bug fix: fixed representation of frequency of updates when value is not integer
  [ghicaale refs #21951]
* Bug fix: fixed frequency of updates logic when value is not numeric
  [ghicaale refs #21951]
* Feature: updated the frequency of updates display text
  [ghicaale refs #21951]

9.1 - (2014-08-27)
------------------
* Bug fix: fixed xml export
  [malduvit refs #20662]

9.0 - (2014-06-30)
------------------
* Bug fix: fixed problems reported by running the tests
  [ghicaale refs #20014]

8.9 - (2014-06-11)
------------------